// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackSelection /> should render with empty content pack 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-lg-8"
    >
      <h2>
        General Information
      </h2>
      <br />
      <form
        className="form-horizontal content-selection-form"
        id="content-selection-form"
        onSubmit={[Function]}
      >
        <fieldset>
          <div
            className="form-group"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="name"
            >
              Name
            </label>
            <div
              className="col-sm-9"
            >
              <input
                className="form-control"
                id="name"
                label="Name"
                maxLength={250}
                name="name"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value={undefined}
              />
              <span
                className="help-block"
              >
                Give a descriptive name for this content pack.
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="summary"
            >
              Summary
            </label>
            <div
              className="col-sm-9"
            >
              <input
                className="form-control"
                id="summary"
                label="Summary"
                maxLength={250}
                name="summary"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value={undefined}
              />
              <span
                className="help-block"
              >
                Give a short summary of the content pack.
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="description"
            >
              Description
            </label>
            <div
              className="col-sm-9"
            >
              <textarea
                className="form-control"
                id="description"
                label="Description"
                name="description"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="textarea"
                value={undefined}
              />
              <span
                className="help-block"
              >
                Give a long description of the content pack in markdown.
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="vendor"
            >
              Vendor
            </label>
            <div
              className="col-sm-9"
            >
              <input
                className="form-control"
                id="vendor"
                label="Vendor"
                maxLength={250}
                name="vendor"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value={undefined}
              />
              <span
                className="help-block"
              >
                Who did this content pack and how can he be reached. e.g Name and eMail
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="url"
            >
              URL
            </label>
            <div
              className="col-sm-9"
            >
              <input
                className="form-control"
                id="url"
                label="URL"
                maxLength={250}
                name="url"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value={undefined}
              />
              <span
                className="help-block"
              >
                Where can I find the content pack. e.g. github url
              </span>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className=""
    >
      <h2>
        Content Pack selection
      </h2>
    </div>
  </div>
  <form
    id="filter-form"
    onSubmit={[Function]}
  >
    <div
      className="row"
    >
      <div
        className=""
      >
        <div
          className="form-group"
        >
          <label
            className="col-sm-1 control-label"
            htmlFor="filter-input"
          >
            Filter
          </label>
          <div
            className="col-sm-4"
          >
            <input
              className="form-control"
              id="filter-input"
              label="Filter"
              maxLength={250}
              name="filter-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value=""
            />
            
          </div>
        </div>
        <button
          className="btn btn-default"
          disabled={false}
          type="submit"
        >
          Filter
        </button>
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Clear
        </button>
      </div>
    </div>
  </form>
  <div
    className="row"
  >
    <div
      className="col-sm-8 col-sm-offset-1"
    >
      <ul
        className="list"
      />
    </div>
  </div>
</div>
`;

exports[`<ContentPackSelection /> should render with filled content pack 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-lg-8"
    >
      <h2>
        General Information
      </h2>
      <br />
      <form
        className="form-horizontal content-selection-form"
        id="content-selection-form"
        onSubmit={[Function]}
      >
        <fieldset>
          <div
            className="form-group"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="name"
            >
              Name
            </label>
            <div
              className="col-sm-9"
            >
              <input
                className="form-control"
                id="name"
                label="Name"
                maxLength={250}
                name="name"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value="name"
              />
              <span
                className="help-block"
              >
                Give a descriptive name for this content pack.
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="summary"
            >
              Summary
            </label>
            <div
              className="col-sm-9"
            >
              <input
                className="form-control"
                id="summary"
                label="Summary"
                maxLength={250}
                name="summary"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value="summmary"
              />
              <span
                className="help-block"
              >
                Give a short summary of the content pack.
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="description"
            >
              Description
            </label>
            <div
              className="col-sm-9"
            >
              <textarea
                className="form-control"
                id="description"
                label="Description"
                name="description"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="textarea"
                value="descr"
              />
              <span
                className="help-block"
              >
                Give a long description of the content pack in markdown.
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="vendor"
            >
              Vendor
            </label>
            <div
              className="col-sm-9"
            >
              <input
                className="form-control"
                id="vendor"
                label="Vendor"
                maxLength={250}
                name="vendor"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value="vendor"
              />
              <span
                className="help-block"
              >
                Who did this content pack and how can he be reached. e.g Name and eMail
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <label
              className="col-sm-3 control-label"
              htmlFor="url"
            >
              URL
            </label>
            <div
              className="col-sm-9"
            >
              <input
                className="form-control"
                id="url"
                label="URL"
                maxLength={250}
                name="url"
                onChange={[Function]}
                placeholder=""
                required={true}
                type="text"
                value="http://example.com"
              />
              <span
                className="help-block"
              >
                Where can I find the content pack. e.g. github url
              </span>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className=""
    >
      <h2>
        Content Pack selection
      </h2>
    </div>
  </div>
  <form
    id="filter-form"
    onSubmit={[Function]}
  >
    <div
      className="row"
    >
      <div
        className=""
      >
        <div
          className="form-group"
        >
          <label
            className="col-sm-1 control-label"
            htmlFor="filter-input"
          >
            Filter
          </label>
          <div
            className="col-sm-4"
          >
            <input
              className="form-control"
              id="filter-input"
              label="Filter"
              maxLength={250}
              name="filter-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value=""
            />
            
          </div>
        </div>
        <button
          className="btn btn-default"
          disabled={false}
          type="submit"
        >
          Filter
        </button>
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Clear
        </button>
      </div>
    </div>
  </form>
  <div
    className="row"
  >
    <div
      className="col-sm-8 col-sm-offset-1"
    >
      <ul
        className="list"
      >
        <li
          className="listItem"
        >
          <div
            className="listItemContainer"
          >
            <label
              className="checkbox-inline"
              style={undefined}
              title=""
            >
              <input
                checked={false}
                disabled={false}
                onChange={[Function]}
                type="checkbox"
              />
            </label>
            <div
              className="expandBoxContainer"
            >
              <div
                className="fa-stack expandBox"
                onClick={[Function]}
                role="button"
                tabIndex={0}
              >
                <i
                  className="fa fa-circle-thin fa-stack-1x iconBackground"
                />
                <i
                  className="fa fa-stack-1x fa-angle-up"
                />
              </div>
            </div>
            <span
              className="header"
            >
              Spaceship
            </span>
          </div>
          <div
            className="expandableContent"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;
